crates/cobrust-lsp/tests/snapshots/snapshot_diagnostics__after_full_replace_unbound_name.snap
---
source: crates/cobrust-lsp/tests/snapshot_diagnostics.rs
expression: diags
snapshot_kind: text
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 13
      },
      "end": {
        "line": 0,
        "character": 14
      }
    },
    "severity": 1,
    "code": "lower-unknown-name",
    "source": "cobrust",
    "message": "unknown name `y` at file#101@13..14",
    "relatedInformation": [
      {
        "location": {
          "uri": "cobrust://synthetic",
          "range": {
            "start": {
              "line": 0,
              "character": 13
            },
            "end": {
              "line": 0,
              "character": 14
            }
          }
        },
        "message": "declare with `let <name> = …` first"
      }
    ],
    "data": {
      "fix_safety": 2
    }
  }
]
