crates/cobrust-lsp/tests/snapshots/snapshot_diagnostics__after_incremental_clears_diagnostics.snap
---
source: crates/cobrust-lsp/tests/snapshot_diagnostics.rs
assertion_line: 263
expression: diags
snapshot_kind: text
---
[]
